# c4-rs

./: AGENTS.md  Cargo.toml  README.md  flake.nix  mise.toml
.github/workflows/: ci.yml  release.yml
src/: c4m.rs  id.rs  lib.rs  main.rs  reconcile.rs  scan.rs  sha512.rs  store.rs  tree.rs
tests/: cli.rs
